tests/specs/ecosystem/oak/oak/14_1_1.test
oak/oak/14.1.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@oak/commons@0.6": "jsr:@oak/commons@0.6.1",
      "jsr:@std/assert@0.215": "jsr:@std/assert@0.215.0",
      "jsr:@std/assert@^0.218.2": "jsr:@std/assert@0.218.2",
      "jsr:@std/crypto@0.218": "jsr:@std/crypto@0.218.2",
      "jsr:@std/encoding@0.215": "jsr:@std/encoding@0.215.0",
      "jsr:@std/encoding@^0.218.2": "jsr:@std/encoding@0.218.2",
      "jsr:@std/http@0.218": "jsr:@std/http@0.218.2",
      "jsr:@std/media-types@0.215": "jsr:@std/media-types@0.215.0",
      "npm:path-to-regexp@6.2.1": "npm:path-to-regexp@6.2.1"
    },
    "jsr": {
      "@oak/commons@0.6.1": {
        "integrity": "c5455d45966d61e11a7a241503ee9b770e0c527f1951edd2a565eff531b8070d",
        "dependencies": [
          "jsr:@std/assert@0.215",
          "jsr:@std/encoding@0.215",
          "jsr:@std/media-types@0.215"
        ]
      },
      "@std/assert@0.215.0": {
        "integrity": "4d80a5b5f1aef916131e3b5dcf8cfdad397affe87da7fa6398d8088e146d1e48"
      },
      "@std/assert@0.218.2": {
        "integrity": "7f0a5a1a8cf86607cd6c2c030584096e1ffad27fc9271429a8cb48cfbdee5eaf"
      },
      "@std/crypto@0.218.2": {
        "integrity": "8c5031a3a1c3ac3bed3c0d4bed2fe7e7faedcb673bbfa0edd10570c8452f5cd2",
        "dependencies": [
          "jsr:@std/assert@^0.218.2",
          "jsr:@std/encoding@^0.218.2"
        ]
      },
      "@std/encoding@0.215.0": {
        "integrity": "9b24c964b0f61ea849d1ea38de7dea2190d08c8ffed732d36595bfb1b5e4dbe5"
      },
      "@std/encoding@0.218.2": {
        "integrity": "da55a763c29bf0dbf06fd286430b358266eb99c28789d89fe9a3e28edecb8d8e"
      },
      "@std/http@0.218.2": {
        "integrity": "54223b62702e665b9dab6373ea2e51235e093ef47228d21cfa0469ee5ac75c9b",
        "dependencies": [
          "jsr:@std/assert@^0.218.2",
          "jsr:@std/encoding@^0.218.2"
        ]
      },
      "@std/media-types@0.215.0": {
        "integrity": "76f3259f65193e848795e634b2782e7d90c861364fb90bcd81775378688091f1"
      }
    },
    "npm": {
      "path-to-regexp@6.2.1": {
        "integrity": "sha512-JLyh7xT1kizaEvcaXOQwOc2/Yhw6KZOvPf1S8401UyLk86CU79LN3vl7ztXGm/pZ+YjoyAJ4rxmHwbkBXJX+yw==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:257:77

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:260:26

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
    at file://<tmpdir>/application.ts:262:80

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'EventTarget'.
   * `"error"` and `"listen"`. */ addEventListener(param0?: any, param1?: any, param2?: any): any {
                                  ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/application.ts:264:35

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Reader'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                          ~~~~~~
    at file://<tmpdir>/range.ts:23:27

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                        ~~~~~~
    at file://<tmpdir>/range.ts:23:41

TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Closer'.
  constructor(file: (Deno.Reader & Deno.Seeker & Deno.Closer) | Uint8Array, type: string, ranges: ByteRange[], size: number, boundary: string){
                                                      ~~~~~~
    at file://<tmpdir>/range.ts:23:55

Found 7 errors.

error: Type checking failed.

